# brief

./: .gitignore  CLAUDE.md  README.md  flake.nix  package.json  pnpm-lock.yaml  product.md
.claude/commands/: task-groom.md  task-new.md  task-start.md
backlog/TASK-1/: plan.md  spec.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  mod.rs  notes.rs  transcribe.rs
src/components/editor/: Editor.tsx  EditorToolbar.tsx  WelcomeScreen.tsx
src/components/sidebar/: Sidebar.tsx
src/lib/: ai.ts  audio.ts  notes.ts  utils.ts
src/types/: index.ts
